--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,10 @@ venv/
 .DS_Store
 Thumbs.db
 
+# Local run artifacts
+runs/
+out_bench/
+
 # Output artifacts (optional; keep if you want to ignore outputs)
 # out*/
 # *.png
