--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,3 +64,11 @@ disallow_untyped_decorators = false
 module = ["streamlit", "plotly", "plotly.*"]
 ignore_missing_imports = true
 
+[[tool.mypy.overrides]]
+module = ["jax", "jax.*"]
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = ["test_mirror_x0_delta_phi", "tests.test_mirror_x0_delta_phi"]
+disable_error_code = ["misc"]
+
